--- a/widget/edit.html
+++ b/widget/edit.html
@@ -3,69 +3,72 @@
   All rights reserved.
   FORTINET CONFIDENTIAL & FORTINET PROPRIETARY SOURCE CODE
   Copyright end -->
-<form data-ng-submit="save()" class="noMargin" name="editWidgetForm" data-ng-class="{'state-wait': processing }"
-    novalidate>
-    <div class="modal-header">
-        <h3 class="modal-title col-md-9">VirusTotal Augment Edit View</h3>
-        <button type="button" class="close" data-ng-click="cancel()" data-dismiss="modal" aria-label="Close"
-            id="close-edit-widget-form-btn">
-            <div aria-hidden="true" class="version-button">+</div>
-        </button>
-    </div>
-    <div class="modal-body">
-        <div class="form-group">
-            <label class="control-label" for="formGroupTitle">Title (leave blank for no title)</label>
-            <input class="form-control" type="text" id="formGroupTitle" data-ng-model="config.title" />
-        </div>
-        <hr>
-        <div class="row margin-bottom-md">
-            <div class="col-md-12">
-                <div class="form-group margin-bottom-0">
-                    <label class="control-label">Select the enrichment field<span class="text-danger">*</span></label>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <select name="fieldSelect" id="fieldSelect" class="form-control" data-ng-model="newField"
-                    data-ng-options="field.name as field.title for field in fieldsArray | filter: fieldNotExists | orderBy: 'title'"
-                    data-ng-disabled="config.rows[0].columns[0].fields.length > 0">
-                    <option value="">Select a field</option>
-                </select>
-            </div>
-            <div class="col-md-6 padding-left-0">
-                <button type="button" class="btn btn-primary" data-ng-click="addField(newField)"
-                    data-ng-disabled="config.rows[0].columns[0].fields.length > 0"
-                    id="addfield-edit-formgroup-btn">Add</button>
-            </div>
-        </div>
-        <div class="row margin-top-lg display-block" data-ng-model="config.rows[0].columns">
-            <div id="template-column-{{$index}}" data-column="{{$index}}"
-                data-ng-repeat="column in config.rows[0].columns" data-ng-class="column.style">
-                <ul id="template-column-fields-{{$index}}" data-as-sortable data-ng-model="column.fields"
-                    class="widgets-container">
-                    <li id="template-column-field-{{$index}}" data-ng-repeat="field in column.fields"
-                        data-as-sortable-item>
-                        <div data-as-sortable-item-handle>
-                            <div class="panel-heading panel-default padding-right-0 widget-panel small text-capitalize">
-                                <span>
-                                    <i class="icon icon-more padding-right-md"></i>{{ fields[field.name].title }}
-                                </span>
-                                <div class="remove-widget-container fields-list">
-                                    <a type="button" class="btn btn-sm btn-default pull-right margin-right-sm"
-                                        data-ng-click="removeField($index, column)">
-                                        <span class="icon icon-close text-danger"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="modal-footer">
-        <button id="edit-widget-save" type="submit" class="btn btn-sm btn-primary"><i
-                class="icon icon-check margin-right-sm"></i>Save</button>
-        <button id="edit-widget-cancel" type="button" class="btn btn-sm btn-default" data-ng-click="cancel()"><i
-                class="icon icon-close margin-right-sm"></i>Close</button>
-    </div>
+  <form data-ng-submit="save()" class="noMargin" name="editWidgetForm" data-ng-class="{'state-wait': processing }"
+  novalidate>
+  <div class="modal-header">
+      <h3 class="modal-title col-md-9">VirusTotal Augment Edit View</h3>
+      <button type="button" class="close" data-ng-click="cancel()" data-dismiss="modal" aria-label="Close"
+          id="close-edit-widget-form-btn">
+          <div aria-hidden="true" class="version-button">+</div>
+      </button>
+  </div>
+  <div class="modal-body">
+      <div class="form-group">
+          <label class="control-label" for="formGroupTitle">Title (leave blank for no title)</label>
+          <input class="form-control" type="text" id="formGroupTitle" data-ng-model="config.title" />
+      </div>
+      <hr>
+      <div class="row margin-bottom-md">
+          <div class="col-md-12">
+              <div class="form-group margin-bottom-0">
+                  <label class="control-label">Select field to enrich<span class="text-danger">*</span></label>
+                  <span data-uib-tooltip="Field value should valid files/hashe, domain, IP or URL."
+                      data-tooltip-append-to-body="true"><i class="margin-left-sm icon icon-information font-Size-13">
+                      </i></span>
+              </div>
+          </div>
+          <div class="col-md-6">
+              <select name="fieldSelect" id="fieldSelect" class="form-control" data-ng-model="newField"
+                  data-ng-options="field.name as field.title for field in fieldsArray | filter: fieldNotExists | orderBy: 'title'"
+                  data-ng-disabled="config.rows[0].columns[0].fields.length > 0">
+                  <option value="">Select a field</option>
+              </select>
+          </div>
+          <div class="col-md-6 padding-left-0">
+              <button type="button" class="btn btn-primary" data-ng-click="addField(newField)"
+                  data-ng-disabled="config.rows[0].columns[0].fields.length > 0"
+                  id="addfield-edit-formgroup-btn">Add</button>
+          </div>
+      </div>
+      <div class="row margin-top-lg display-block" data-ng-model="config.rows[0].columns">
+          <div id="template-column-{{$index}}" data-column="{{$index}}"
+              data-ng-repeat="column in config.rows[0].columns" data-ng-class="column.style">
+              <ul id="template-column-fields-{{$index}}" data-as-sortable data-ng-model="column.fields"
+                  class="widgets-container">
+                  <li id="template-column-field-{{$index}}" data-ng-repeat="field in column.fields"
+                      data-as-sortable-item>
+                      <div data-as-sortable-item-handle>
+                          <div class="panel-heading panel-default padding-right-0 widget-panel small text-capitalize">
+                              <span>
+                                  <i class="icon icon-more padding-right-md"></i>{{ fields[field.name].title }}
+                              </span>
+                              <div class="remove-widget-container fields-list">
+                                  <a type="button" class="btn btn-sm btn-default pull-right margin-right-sm"
+                                      data-ng-click="removeField($index, column)">
+                                      <span class="icon icon-close text-danger"></span>
+                                  </a>
+                              </div>
+                          </div>
+                      </div>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </div>
+  <div class="modal-footer">
+      <button id="edit-widget-save" type="submit" class="btn btn-sm btn-primary"><i
+              class="icon icon-check margin-right-sm"></i>Save</button>
+      <button id="edit-widget-cancel" type="button" class="btn btn-sm btn-default" data-ng-click="cancel()"><i
+              class="icon icon-close margin-right-sm"></i>Close</button>
+  </div>
 </form>
