--- a/widget/view.html
+++ b/widget/view.html
@@ -3,7 +3,7 @@
   All rights reserved.
   FORTINET CONFIDENTIAL & FORTINET PROPRIETARY SOURCE CODE
   Copyright end -->
-  <div class="widget-container chart">
+<div class="widget-container chart">
     <div class="display-flex-space-between margin-chart">
         <div class="padding-right-0 padding-left-0"
             data-ng-class="(page === 'dashboard' || page === 'reporting') ? 'widget-dashboard-title-width' : 'widget-title-width'">
@@ -21,13 +21,14 @@
             <cs-spinner class="state-wait" data-show-background="true"></cs-spinner>
             <div class="font-size-14 muted-80">Fetching Enrichment Details ...</div>
         </div>
-        <div data-ng-if="!loadProcessing && healthCheck && connectorConfig" data-cs-iframe="renderingURL.url"></div>
+        <div data-ng-if="!loadProcessing && healthCheck && connectorConfig" data-cs-iframe="renderingURL"></div>
         <div data-ng-if="loadProcessing && !healthCheck && connectorConfig">
             <div class="font-size-14 muted-80 text-center">No valid VirusTotal connector configuration
                 detected.<br>Review connector configuration to view the enrichment details.</div>
         </div>
         <div data-ng-if="loadProcessing && healthCheck && !connectorConfig">
-            <div class="font-size-14 muted-80 text-center">No VirusTotal connector configuration detected.<br> Install and configure connector to view the enrichment details.</div>
+            <div class="font-size-14 muted-80 text-center">No VirusTotal connector configuration detected.<br> Install
+                and configure connector to view the enrichment details.</div>
         </div>
     </div>
 </div>
